# BitCrawlerBot

./: .env.example  .gitignore  README.md  pyproject.toml  template.sql
bitcrawler/: __main__.py  config.py  signals.py
bitcrawler/callbacks/: __init__.py  add.py  menu.py  my_mirrors.py  new_mirror.py
bitcrawler/commands/: __init__.py  darken.py  illuminate.py  mirrors.py  on_archive.py  ping.py  search.py  start.py  still_alive.py  update.py
bitcrawler/core/: bot.py  mirror.py
bitcrawler/handlers/: __init__.py  callbacks.py  messages.py
bitcrawler/storage/: __init__.py  sqlitestorage.py
bitcrawler/userbot/: __init__.py  client.py
bitcrawler/utils/: __init__.py  archive.py  db.py  logger.py  utils.py
